--- a/project2/10j-calculator-final2.css
+++ b/project2/10j-calculator-final2.css
@@ -33,3 +33,9 @@ body {
   background-color: rgb(254, 160, 10);
   color: white;
 }
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
